Contact Page delay fix on Mobile

--- a/src/Componets/contact/contact.scss
+++ b/src/Componets/contact/contact.scss
@@ -84,6 +84,7 @@
         width: 300px;
         height: 300px;
         z-index: -1;
+        display: none; // Disable on mobile as requested
       }
     }
 
